--- a/OnlineStore/Views/Shared/_Layout.cshtml
+++ b/OnlineStore/Views/Shared/_Layout.cshtml
@@ -23,8 +23,15 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Browse Groceries", "Index", "Category")</li>
-                    <li>@Html.ActionLink("Shopping Basket", "Details", "Basket")</li>
+                    <li>@Html.ActionLink("Basket", "Details", "Basket")</li>
                 </ul>
+                @using (Html.BeginForm("Index", "Search", FormMethod.Get, new { @class="navbar-form navbar-left"}))
+                {
+                    <div class="form-group">
+                        @Html.TextBox("q", null, new { @class="form-control", placeholder="Search" })
+                    </div>
+                    <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+                }
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
