Checkout and orders

--- a/OnlineStore/Views/Search/Index.cshtml
+++ b/OnlineStore/Views/Search/Index.cshtml
@@ -4,6 +4,6 @@
     ViewBag.Title = "Search Results";
 }
 
-<h2>Search Results for @Model.SearchTerm</h2>
+<h2>Search Results for "@(Model.SearchTerm)"</h2>
 
 @Html.Partial("_ProductTable", Model.Products)
