Admin area and managing products

--- a/OnlineStore/Content/Site.css
+++ b/OnlineStore/Content/Site.css
@@ -29,11 +29,11 @@ h1, h2, h3, h4,h5,h6 {
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,
 select,
 textarea {
     max-width: 280px;
-}
+}*/
 
 .add-to-basket-block {
     margin-bottom: 1em;
