--- a/OnlineStore/Areas/Admin/Views/Products/Edit.cshtml
+++ b/OnlineStore/Areas/Admin/Views/Products/Edit.cshtml
@@ -1,52 +1,72 @@
-﻿@model OnlineStore.Data.Models.Product
+﻿@model OnlineStore.Areas.Admin.ViewModels.ManageProductViewModel
 
 @{
-    ViewBag.Title = $"Editing {Model.Name}";
+    ViewBag.Title = $"Editing {Model.Product.Name}";
 }
 
-<h2 class="page-header">Editing @Model.Name</h2>
+<h2 class="page-header">Editing @Model.Product.Name</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.Product.Id)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Name)
-        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        @Html.LabelFor(model => model.Product.Name)
+        @Html.EditorFor(model => model.Product.Name, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Product.Name, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.DescriptionShort)
-        @Html.TextAreaFor(model => model.DescriptionShort, 5, 5, new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.DescriptionShort, "", new { @class = "text-danger" })
+        @Html.LabelFor(model => model.Product.DescriptionShort)
+        @Html.TextAreaFor(model => model.Product.DescriptionShort, 5, 5, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.Product.DescriptionShort, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.DescriptionLong)
-        @Html.TextAreaFor(model => model.DescriptionLong, 5, 5, new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.DescriptionLong, "", new { @class = "text-danger" })
+        @Html.LabelFor(model => model.Product.DescriptionLong)
+        @Html.TextAreaFor(model => model.Product.DescriptionLong, 5, 5, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.Product.DescriptionLong, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Added)
-        @Html.EditorFor(model => model.Added, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Added, "", new { @class = "text-danger" })
+        @Html.LabelFor(model => model.MainCategory)
+        @Html.DropDownListFor(
+            model => model.MainCategory,
+            Model.Categories.Select(c =>
+                new SelectListItem { Text = c.Name, Value = c.Id.ToString(), Selected = c.Id == Model.MainCategory }).ToList<SelectListItem>(),
+            new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.MainCategory, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Quantity)
-        @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+        @Html.LabelFor(model => model.SecondaryCategory)
+        @Html.DropDownListFor(
+            model => model.SecondaryCategory,
+            Model.Categories.Select(c =>
+                new SelectListItem { Text = c.Name, Value = c.Id.ToString(), Selected = c.Id == Model.SecondaryCategory }).ToList<SelectListItem>(),
+            new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.SecondaryCategory, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Price)
-        @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+        @Html.LabelFor(model => model.Product.Added)
+        @Html.EditorFor(model => model.Product.Added, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Product.Added, "", new { @class = "text-danger" })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Product.Quantity)
+        @Html.EditorFor(model => model.Product.Quantity, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Product.Quantity, "", new { @class = "text-danger" })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Product.Price)
+        @Html.EditorFor(model => model.Product.Price, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Product.Price, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
